--- a/css/EDC.css
+++ b/css/EDC.css
@@ -9,18 +9,23 @@ body
 }
 #Logo
 {
-	display:block;
-	margin-top: auto;
+	
 	margin-left: auto;
 	margin-right: auto;
-	max-width:50%;
+    max-width: 50%;
+	max-height: 100%;
+	position: static;
 	
+}
+span
+{
+	text-align:center;
 }
 #links
 {
 	padding:0px 20px 20px;
 	font-size: 1.2em;
-	float:left;
+
 }
 ul.deco
 {
