--- a/css/EDC.css
+++ b/css/EDC.css
@@ -9,8 +9,9 @@ body
 }
 #Logo
 {
-	
-	
+	padding-top: 20px;
+	margin-left: auto;
+	margin-right: auto;
     max-width: 50%;
 	max-height: 100%;
 	position: static;
