--- a/css/EDC.css
+++ b/css/EDC.css
@@ -10,9 +10,10 @@ body
 #Logo
 {
 	padding-top: 20px;
+	padding-left: 20px;
 	margin-left: auto;
 	margin-right: auto;
-    max-width: 50%;
+   
 	max-height: 100%;
 	position: static;
 	
