--- a/css/EDC.css
+++ b/css/EDC.css
@@ -13,11 +13,15 @@ body
 	padding-left: 20px;
 	margin-left: auto;
 	margin-right: auto;
-	max-height: 100%;
+	
 }
 span
 {
 	text-align:center;
+}
+.size
+{
+	max-width:40%;
 }
 #links
 {
