--- a/css/EDC.css
+++ b/css/EDC.css
@@ -69,10 +69,10 @@ a
 	font-weight: 150;
 }
 a:link {
-  color: #000000;
+  color: #ADD8E6;
 }
 a:visited {
-  color: #002D3A;
+  color: #ADD8E6;
 }
 a:hover {
   color: #cc3366;
